src/snapshots/rust_aidl__parser__tests__annotation3.snap
---
source: src/parser.rs
expression: res

---
Some(Annotation(
  name: "@AnnotationName",
  key_values: {
    "Hello": None,
  },
))
