src/snapshots/rust_aidl__parser__tests__annotation4.snap
---
source: src/parser.rs
expression: res

---
Some(Annotation(
  name: "@AnnotationName",
  key_values: {
    "Hello": Some("\"World\""),
  },
))
