src/snapshots/rust_aidl__parser__tests__annotation5.snap
---
source: src/parser.rs
expression: res

---
Some(Annotation(
  name: "@AnnotationName",
  key_values: {
    "Hello": Some("\"World\""),
    "Hi": None,
    "Servus": Some("3"),
  },
))
