src/snapshots/rust_aidl__parser__tests__const_string.snap
---
source: src/parser.rs
expression: res

---
Const(
  name: "CONST_NAME",
  const_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  value: "\"const value\"",
  annotations: [],
  doc: None,
  symbol_range: "...",
  full_range: "...",
)
